Fixed stream list overflow

--- a/notifpy/static/notifpy/css/layout.css
+++ b/notifpy/static/notifpy/css/layout.css
@@ -208,7 +208,7 @@ a:hover {
 }
 
 .channel-banner--expanded {
-    height: 46px;
+    height: auto;
     margin: 20px 0 20px 0;
     opacity: 1;
 }
